[package]
name = "gdiplus-sys2"
version = "0.1.1"
edition = "2021"
authors = ["David Rios <david.rios.gomes@gmail.com>"]
license = "MIT"
description = "Raw FFI bindings for GDI+"
repository = "https://github.com/davidrios/gdiplus-sys"
readme = "README.md"
keywords = ["windows", "ffi", "win32", "gdiplus", "gdip"]
categories = ["external-ffi-bindings", "no-std", "os::windows-apis"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/build.rs", "/README.md"]

[dependencies]
windows-sys = { version = "*", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
]}

[build-dependencies]
bindgen = "0.60"